New-Upload-1755854042013/objects/Class_Access__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Class Accesses</relationshipLabel>
        <relationshipName>Class_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Class Access</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Class Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>